syntax = "proto3";
option go_package = "./client";
package client;

service Grade {
  rpc PostGrade (GradeRecord) returns (GradeResponse);
}

message GradeRecord {
  string carnet = 1;
  string nombre = 2;
  string curso = 3;
  int32 nota = 4;
  string semestre = 5;
  int32 year = 6;
}

message GradeResponse {
  string response = 1;
}